--- a/src/components/header/TheHeader/template.html
+++ b/src/components/header/TheHeader/template.html
@@ -60,26 +60,7 @@
         </router-link>
       </div>
       <div class="col-sm-4">
-        <form
-          id="form-search"
-          action="#"
-          class="search-box text-right"
-          v-on:submit.prevent="search"
-        >
-          <input
-            name="q"
-            type="search"
-            :placeholder="$t('search')"
-            id="search-input"
-            class="search-field"
-            v-model="searchText"
-            required
-          />
-          <button type="submit" id="search-button" class="search-button">
-            <span class="icon-font icon-magnifying-glass"></span>
-            <span class="sr-only">{{ $t('search') }}</span>
-          </button>
-        </form>
+        <Search />
       </div>
     </div>
     <div class="row">
